opam-version: "2.0"
version: "0.1"
synopsis: "Simple SVG parser and rasterizer"
description:
  "The NanoSVG library and rasterizer, packaged as an OCaml library"
maintainer: ["Armaël Guéneau <armael.gueneau@ens-lyon.org>"]
authors: [
  "Mikko Mononen memon@inside.org"
  "Armaël Guéneau <armael.gueneau@ens-lyon.org>"
]
license: "MIT"
homepage: "https://github.com/Armael/ocaml-nanosvg"
bug-reports: "https://github.com/Armael/ocaml-nanosvg/issues"
depends: [
  "ocaml" {>= "4.12.0"}
  "dune" {>= "2.7"}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/Armael/ocaml-nanosvg.git"
